--- a/calculator.css
+++ b/calculator.css
@@ -13,7 +13,7 @@
 }
 /* Display */
 .display {
-	background-color: #bfc4ce;
+	background-color: #000000;
 	width: 220px;
 	position: relative;
 	left: 15px;
